*** empty log message ***

--- a/Validation/SimuDataBase/Short_term/FMO/cfg/FMO.cfg
+++ b/Validation/SimuDataBase/Short_term/FMO/cfg/FMO.cfg
@@ -1,11 +1,10 @@
 # Scalable H.264/AVC Extension Configuration File
 
 #============================== GENERAL ==============================
-OutputFile              str/FMO_2L_100f_FGS3.264 # Bitstream file
+OutputFile              str/FMO.264         # Bitstream file
 FrameRate               15                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
 FramesToBeEncoded       30                    # Number of frames (at input frame rate)
-QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
 GOPSize                 8                     # GOP Size (at maximum frame rate)
@@ -32,8 +31,8 @@ LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid rang
 
 #============================== LAYER DEFINITION ==============================
 NumLayers               2                      # Number of layers
-LayerCfg                cfg/layer0.cfg    # Layer configuration file
-LayerCfg                cfg/layer1.cfg    # Layer configuration file
+LayerCfg                cfg/FMO_L0.cfg    # Layer configuration file
+LayerCfg                cfg/FMO_L1.cfg    # Layer configuration file
 
 
 
