--- a/Validation/SimuDataBase/Short_term/FMO/cfg/FMO_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/FMO/cfg/FMO_L1.cfg
@@ -3,35 +3,39 @@
 #============================== INPUT / OUTPUT ==============================
 SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
-FrameRateIn     30                      # Input  frame rate [Hz]
-FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/FMO_352x288_30.yuv # Input  file
-ReconFile       tmp/FMO_rec_L1.yuv    # Reconstructed file
-SymbolMode	1			# (0:CAVLC, 1:CABAC)
+FrameRateIn     15                      # Input  frame rate [Hz]
+FrameRateOut    15                      # Output frame rate [Hz]
+InputFile       orig/FMO_352x288_15.yuv  # Input  file
+ReconFile       tmp/FMO_rec_L1.yuv # Reconstructed file
+SymbolMode      1
 
 #============================== DECOMPOSITION (MCTF) ==============================
 FRExt           1                       # FREXT mode (0:off, 1:on)
 
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
-QP              36.00                   # Quantization parameters
-NumFGSLayers    1.00                    # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+QP              25.0                    # Quantization parameters
 
 #============================== CONTROL (MCTF) ==============================
-MeQP0           35.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           35.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           35.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           35.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           35.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           35.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           34.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           34.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           34.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           34.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           34.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           34.00                   # QP for motion estimation / mode decision (stage 5)
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
 
-MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
-
-NumSlicGrpMns1	2
-SlcGrpMapType	1
+#============================== FMO ==============================
+NumSlicGrpMns1  1                                                 # Number of Slice Groups Minus 1, 0 == no FMO, 1 == two slice groups, etc.
+SlcGrpMapType   2                                                 # slice_group_map_type,0:  Interleave, 1: Dispersed,    2: Foreground with left-over, 
+                                                    # 3:  Box-out,    4: Raster Scan   5: Wipe
+                                                    # 6:  Explicit, slice_group_id read from SliceGroupConfigFileName
+SlcGrpChgDrFlag 0                                                 # slice_group_change_direction_flag, 0: box-out clockwise, raster scan or wipe right, 
+                                                    # 1: box-out counter clockwise, reverse raster scan or wipe left
+SlcGrpChgRtMus1 85                                                # slice_group_change_rate_minus1 
+SlcGrpCfgFileNm cfg/sgconf_layer1.cfg		  # SliceGroupConfigFileName,          : Used for slice_group_map_type 0, 2, 6
 
 #============================== CHROMA POSITION ===============================
 UseESS              1                   # ESS
