*** empty log message ***

--- a/Validation/SimuDataBase/Long_term/LCFG1_P2I/cfg/LCFG1_P2I_L1.cfg
+++ b/Validation/SimuDataBase/Long_term/LCFG1_P2I/cfg/LCFG1_P2I_L1.cfg
@@ -30,3 +30,6 @@ BaseQuality     0                       # Base quality level [0..15] (0: no, 15:
 
 MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
 
+UseESS          1                      # ESS seq
+ESSCropWidth    704                    # layer-1 upsampled frame width
+ESSCropHeight   576                    # layer-1 upsampled frame height
