--- a/Validation/SimuDataBase/Short_term/CFG1_P2I/cfg/CFG1_P2I_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/CFG1_P2I/cfg/CFG1_P2I_L1.cfg
@@ -6,7 +6,7 @@ SourceHeight    576                    # Input  frame height
 FrameRateIn     25                     # Input  frame rate [Hz]
 FrameRateOut    25                     # Output frame rate [Hz]
 InputFile       orig/CFG1_P2I_720x576_25.yuv # Input  file
-ReconFile       CFG1_P2I_rec_L1.yuv      # Reconstructed file
+ReconFile       tmp/CFG1_P2I_rec_L1.yuv      # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 MbAff           1   			# Mb Adaptive Frame Field coding (0: ON, 1: OFF)                    
 
