--- a/JSVM/H264Extension/src/lib/H264AVCEncoderLib/H264AVCEncoderLibStatic_vc8.vcproj
+++ b/JSVM/H264Extension/src/lib/H264AVCEncoderLib/H264AVCEncoderLibStatic_vc8.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="H264AVCEncoderLibStatic"
 	ProjectGUID="{429A9314-F0A4-46E4-9B79-CF1FBEFBB777}"
 	RootNamespace="H264AVCEncoderLibStatic"
@@ -662,6 +662,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\RateCtlBase.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\RateCtlQuadratic.cpp"
+				>
+			</File>
+			<File
 				RelativePath="RateDistortion.cpp"
 				>
 				<FileConfiguration
@@ -847,6 +855,14 @@
 			</File>
 			<File
 				RelativePath=".\PicEncoder.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\RateCtlBase.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\RateCtlQuadratic.h"
 				>
 			</File>
 			<File
