correct VC 6 and VC 7 workspaces

--- a/JSVM/H264Extension/src/tools/YUVCompare/YUVCompare.vcproj
+++ b/JSVM/H264Extension/src/tools/YUVCompare/YUVCompare.vcproj
@@ -3,6 +3,7 @@
 	ProjectType="Visual C++"
 	Version="7.10"
 	Name="YUVCompareStatic"
+	ProjectGUID="{70688DBE-8755-4F2D-A69A-9C31877B602E}"
 	SccProjectName=""
 	SccLocalPath="">
 	<Platforms>
