correction of validation scripts that use slices

--- a/Validation/SimuDataBase/Short_term/CIU1/cfg/CIU1_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/CIU1/cfg/CIU1_L0.cfg
@@ -22,6 +22,8 @@ MeQP3           28.00                   # QP for motion estimation / mode decisi
 MeQP4           28.00                   # QP for motion estimation / mode decision (stage 4)
 MeQP5           28.00                   # QP for motion estimation / mode decision (stage 5)
 
-
 InterLayerPred  0                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
+
+SliceMode               1
+SliceArgument           17
