--- a/Validation/SimuDataBase/Short_term/CIU2/cfg/CIU2_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/CIU2/cfg/CIU2_L1.cfg
@@ -30,3 +30,6 @@ ESSCropWidth        312                 # cropping width
 ESSCropHeight       264                 # cropping height
 ESSOriginX      16
 ESSOriginY      16
+
+SliceMode               1
+SliceArgument           25
