--- a/Validation/SimuDataBase/Short_term/SliceRewrite/cfg/SliceRewrite_L2.cfg
+++ b/Validation/SimuDataBase/Short_term/SliceRewrite/cfg/SliceRewrite_L2.cfg
@@ -27,3 +27,7 @@ BaseQuality     0                       # Base quality level [0..15] (0: no, 15:
 
 AvcRewriteFlag          1               # Enable SVC to AVC rewrite (0: no, 1: yes)
 
+
+#===============================Slice=====================================
+SliceMode               2
+SliceArgument           500
