--- a/Validation/SimuDataBase/Short_term/SliceRewrite3/cfg/SliceRewrite3_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/SliceRewrite3/cfg/SliceRewrite3_L1.cfg
@@ -24,3 +24,8 @@ InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes,
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
 
 AvcRewriteFlag          1               # Enable SVC to AVC rewrite (0: no, 1: yes)
+
+#===============================Slice=====================================
+SliceMode               2
+SliceArgument           500
+
