--- a/Validation/SimuDataBase/Short_term/CIU1/cfg/CIU1_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/CIU1/cfg/CIU1_L1.cfg
@@ -25,3 +25,5 @@ MeQP5           32.00                   # QP for motion estimation / mode decisi
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
 
+SliceMode               1
+SliceArgument           17
