--- a/Validation/SimuDataBase/Short_term/SLICE/cfg/SLICE_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/SLICE/cfg/SLICE_L0.cfg
@@ -23,3 +23,7 @@ MeQP5           38.00                   # QP for motion estimation / mode decisi
 InterLayerPred  0                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
 PLR             20
+
+#===============================Slice=====================================
+SliceMode               2
+SliceArgument           2000
