--- a/Validation/SimuDataBase/Short_term/SLICE/cfg/SLICE_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/SLICE/cfg/SLICE_L1.cfg
@@ -24,3 +24,7 @@ InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes,
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
 
 PLR             20
+
+#===============================Slice=====================================
+SliceMode               2
+SliceArgument           2000
