--- a/Validation/SimuDataBase/Short_term/SLICE3/cfg/SLICE3_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/SLICE3/cfg/SLICE3_L0.cfg
@@ -25,3 +25,7 @@ MeQP5           32.00                   # QP for motion estimation / mode decisi
 
 InterLayerPred  0                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
+
+#===============================Slice=====================================
+SliceMode               2
+SliceArgument           500
