--- a/Validation/SimuDataBase/Short_term/SkipSlice1/cfg/SkipSlice1_L4.cfg
+++ b/Validation/SimuDataBase/Short_term/SkipSlice1/cfg/SkipSlice1_L4.cfg
@@ -25,3 +25,7 @@ BaseQuality     0                       # Base quality level [0..15] (0: no, 15:
 
 AvcRewriteFlag  0                       # rewriting 
 SliceSkip       1                       # encode skipped slices where possible
+
+#===============================Slice=====================================
+SliceMode               1
+SliceArgument           99
