--- a/Validation/SimuDataBase/Short_term/SliceMGS/cfg/SliceMGS_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/SliceMGS/cfg/SliceMGS_L1.cfg
@@ -24,3 +24,7 @@ MeQP5           28.00                   # QP for motion estimation / mode decisi
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     0                       # Base quality level [0..15] (0: no, 15: all) 
+
+#===============================Slice=====================================
+SliceMode               2
+SliceArgument           500
