--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -13,8 +13,7 @@ MGSControl              1                      # (0:ME+MC using current layer, 1
 GOPSize                 16                     # GOP Size (at maximum frame rate)
 IntraPeriod             16                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
-BaseLayerMode           1                      # Base layer mode (0:AVC w large DPB,
-                                               #   1:AVC compatible, 2:AVC w subseq SEI)
+BaseLayerMode           1                      # Base layer mode (0,1:AVC compatible, 2:AVC w subseq SEI)
 
 #============================== MOTION SEARCH ==============================
 SearchMode              4                      # Search mode (0:BlockSearch, 4:FastSearch)
@@ -33,9 +32,9 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               2                        # Number of layers
-LayerCfg                layer0.cfg # Layer configuration file
-LayerCfg                layer1.cfg # Layer configuration file
+NumLayers               2                      # Number of layers
+LayerCfg                layer0.cfg             # Layer configuration file
+LayerCfg                layer1.cfg             # Layer configuration file
 
 PreAndSuffixUnitEnable  1                      # Add prefix and suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
 MMCOBaseEnable          1                      # MMCO for base representation (0: off, 1: on)
