config file updates (just for completeness)

--- a/JSVM/H264Extension/data/MVC.cfg
+++ b/JSVM/H264Extension/data/MVC.cfg
@@ -13,6 +13,7 @@ FramesToBeEncoded       50         # number of frames
 #====================== CODING =================================================
 SymbolMode              1          # 0=CAVLC, 1=CABAC
 Enable8x8Transform      1          # 8x8 luma trafo (0:diabled, 1:enabled)
+ConstrainedIntraPred    0          # constrained intra prediction (0:off, 1:on)
 ScalingMatricesPresent  1          # scaling matrices (0:flat, 1:default)
 BiPred8x8Disable        0          # disable bi-predicted blocks smaller than 8x8
 MCBlocksLT8x8Disable    0          # blocks smaller than 8x8 are disabled
