--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -22,6 +22,7 @@ UseLongTerm             0                  # type of ref. pics. (0: short-term, 
 MMCOEnable              1                  # MMCO for decoded layer repr.n (0: off, 1: on)
 MMCOBaseEnable          1                  # MMCO for base representation (0: off, 1: on)
 Enable8x8Transform      1                  # 8x8 luma trafo (0:diabled, 1:enabled)
+ConstrainedIntraPred    0                  # constrained intra prediction (0:off, 1:on)
 CbQPIndexOffset         -1                 # QP index offset for the Cb component
 CrQPIndexOffset         -2                 # QP index offset for the Cr component
 ScalingMatricesPresent  0                  # scaling matrices (0:not used, 1:used)
